src/style.css
* {
  box-sizing: border-box;
  margin: 0;
  font-family: sans-serif;
}

.container {
  display: flex;
  flex-direction: column;
  height: 100svh;
  background-color: #7bb9ff;
  background-size: cover;
  color: white;
  transform: background-image 300ms ease;
}

.header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px 0;
  text-shadow: 2px 2px 3px black;
}

.header img {
  height: 5rem;
}

.weather-container {
  display: flex;
  height: 100%;
  justify-content: space-between;
  padding: 0 50px;
  align-items: center;
}

.info-container {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-shadow: 2px 2px 3px black;
  width: clamp(300px, 90%, 400px);
  gap: 12px;
}

.city-time {
  font-size: 20px;
}

#city {
  font-size: 36px;
}

.temperature {
  display: flex;
  font-size: 2rem;
  align-items: center;
}

.condition {
  font-size: 1.5rem;
}

.more-info {
  display: flex;
}

.input-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: clamp(300px, 90%, 400px);
  height: 400px;
  text-shadow: 2px 2px 3px black;
  gap: 12px;
}

.input-container input {
  width: 200px;
  height: 30px;
  border-radius: 8px;
  border-style: none;
  outline: none;
  padding-left: 32px;
  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
}

.input-container input:hover {
  outline: 2px solid black;
}

.input-container label {
  font-size: 2em;
}

#magnify {
  position: absolute;
  height: 1.5rem;
  margin-left: 4px;
  margin-top: 4px;
}

#magnify:hover {
  cursor: pointer;
}

#location-marker {
  height: 3rem;
}

.error {
  color: rgb(255, 0, 0);
  text-shadow: 1px 1px 2px rgb(117, 0, 0);
  font-size: 20px;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: auto;
  height: 50px;
  text-shadow: 2px 2px 3px black;
}

.footer a {
  color: white;
}

.footer a:hover {
  color: #c7c7c7;
}

.footer a:visited {
  color: #adf3ff;
}

.footer a:visited:hover {
  color: #91ccd6;
}

@media screen and (width<=750px) {
  .weather-container {
    flex-direction: column;
    justify-content: center;
  }
  .footer {
    flex-direction: column;
    height: auto;
    padding-bottom: 6px;
  }
}

